[tool.poetry]
name = "irango-api-python"
version = "0.1.0"
description = ""
authors = ["SMarkus27 <pereira.markus.27@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "3.3.1"
pymongo = "4.5.0"
python-decouple = "3.8"
flask-jwt-extended = "4.5.2"
passlib = "1.7.4"
flask-smorest = "0.42.1"
flask-cors = "4.0.0"
redis = "5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
